--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -310,6 +310,7 @@
 123.13.57.174 xmlrpc;
 123.13.57.197 xmlrpc;
 123.13.57.21 xmlrpc;
+123.13.57.61 xmlrpc;
 123.13.58.178 xmlrpc;
 123.13.58.200 xmlrpc;
 123.13.58.206 xmlrpc;
@@ -2435,6 +2436,7 @@
 91.224.99.244 xmlrpc;
 91.225.228.38 xmlrpc;
 91.226.15.109 xmlrpc;
+91.226.15.12 xmlrpc;
 91.226.15.51 xmlrpc;
 91.226.164.72 xmlrpc;
 91.226.165.101 xmlrpc;
