Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1040,6 +1040,7 @@
 185.54.237.19 xmlrpc;
 185.54.237.20 xmlrpc;
 185.57.30.59 xmlrpc;
+185.58.219.160 xmlrpc;
 185.59.244.241 xmlrpc;
 185.59.246.172 xmlrpc;
 185.59.246.232 xmlrpc;
