Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -660,6 +660,7 @@
 175.27.212.157 xmlrpc;
 175.6.103.17 xmlrpc;
 176.101.111.114 xmlrpc;
+176.101.234.41 xmlrpc;
 176.101.245.86 xmlrpc;
 176.104.192.242 xmlrpc;
 176.106.151.121 xmlrpc;
@@ -1126,6 +1127,7 @@
 188.227.29.180 xmlrpc;
 188.227.83.130 xmlrpc;
 188.232.26.21 xmlrpc;
+188.232.28.139 xmlrpc;
 188.232.28.67 xmlrpc;
 188.232.8.156 xmlrpc;
 188.232.8.94 xmlrpc;
@@ -1958,6 +1960,7 @@
 5.101.157.81 xmlrpc;
 5.101.157.98 xmlrpc;
 5.101.6.56 xmlrpc;
+5.104.57.229 xmlrpc;
 5.129.176.103 xmlrpc;
 5.137.226.68 xmlrpc;
 5.138.106.127 xmlrpc;
