Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1654,6 +1654,7 @@
 37.230.136.224 xmlrpc;
 37.29.24.216 xmlrpc;
 37.29.24.222 xmlrpc;
+37.29.4.254 xmlrpc;
 37.29.88.50 xmlrpc;
 37.75.223.37 xmlrpc;
 37.78.153.234 xmlrpc;
