--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1458,6 +1458,7 @@
 217.15.62.115 xmlrpc;
 217.150.36.9 xmlrpc;
 217.151.224.111 xmlrpc;
+217.151.224.167 xmlrpc;
 217.151.225.200 xmlrpc;
 217.23.67.62 xmlrpc;
 217.25.83.191 xmlrpc;
@@ -2467,6 +2468,7 @@
 91.233.44.2 xmlrpc;
 91.235.185.155 xmlrpc;
 91.235.88.75 xmlrpc;
+91.235.88.90 xmlrpc;
 91.236.143.134 xmlrpc;
 91.236.143.156 xmlrpc;
 91.236.247.200 xmlrpc;
