--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1818,6 +1818,7 @@
 46.138.54.22 xmlrpc;
 46.138.56.227 xmlrpc;
 46.147.98.5 xmlrpc;
+46.148.128.33 xmlrpc;
 46.148.132.183 xmlrpc;
 46.148.141.160 xmlrpc;
 46.148.141.31 xmlrpc;
@@ -2552,6 +2553,7 @@
 93.157.23.65 xmlrpc;
 93.157.255.5 xmlrpc;
 93.158.248.9 xmlrpc;
+93.170.12.244 xmlrpc;
 93.171.195.224 xmlrpc;
 93.171.97.229 xmlrpc;
 93.177.118.214 xmlrpc;
