--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2460,6 +2460,7 @@
 91.223.32.105 xmlrpc;
 91.223.70.185 xmlrpc;
 91.224.140.160 xmlrpc;
+91.224.254.183 xmlrpc;
 91.224.99.244 xmlrpc;
 91.225.228.38 xmlrpc;
 91.226.15.109 xmlrpc;
