Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2033,6 +2033,7 @@
 5.2.56.89 xmlrpc;
 5.206.10.214 xmlrpc;
 5.227.10.212 xmlrpc;
+5.227.10.248 xmlrpc;
 5.227.28.46 xmlrpc;
 5.227.30.21 xmlrpc;
 5.228.4.204 xmlrpc;
@@ -2570,6 +2571,7 @@
 94.102.127.136 xmlrpc;
 94.103.231.191 xmlrpc;
 94.103.231.250 xmlrpc;
+94.125.242.249 xmlrpc;
 94.140.152.206 xmlrpc;
 94.140.233.151 xmlrpc;
 94.140.233.208 xmlrpc;
