--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1620,6 +1620,7 @@
 35.213.170.208 xmlrpc;
 36.143.181.122 xmlrpc;
 36.143.181.79 xmlrpc;
+37.1.12.35 xmlrpc;
 37.112.26.142 xmlrpc;
 37.113.237.15 xmlrpc;
 37.139.53.17 xmlrpc;
