Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -820,6 +820,7 @@
 178.65.112.176 xmlrpc;
 178.66.28.65 xmlrpc;
 178.67.15.234 xmlrpc;
+178.67.192.244 xmlrpc;
 178.67.192.28 xmlrpc;
 178.67.196.207 xmlrpc;
 178.67.249.130 xmlrpc;
