Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1062,7 +1062,6 @@
 185.61.76.194 xmlrpc;
 185.61.78.163 xmlrpc;
 185.68.247.250 xmlrpc;
-185.72.224.95 xmlrpc;
 185.8.126.198 xmlrpc;
 185.80.150.68 xmlrpc;
 185.82.177.99 xmlrpc;
@@ -1538,6 +1537,7 @@
 2a00:f940:2:1:2:0:1:496d xmlrpc;
 2a02:4780:3:694:0:1960:fb4d:1 xmlrpc;
 2a02:4780:e:f10c::1 xmlrpc;
+2a03:6f00:1::5c35:600c xmlrpc;
 2a03:6f00:1::5c35:6067 xmlrpc;
 2a03:6f00:1::5c35:606a xmlrpc;
 2a03:6f00:1::5c35:6083 xmlrpc;
