Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -800,6 +800,7 @@
 178.252.127.246 xmlrpc;
 178.252.127.254 xmlrpc;
 178.34.151.183 xmlrpc;
+178.34.160.66 xmlrpc;
 178.34.161.217 xmlrpc;
 178.34.162.148 xmlrpc;
 178.34.83.230 xmlrpc;
@@ -2332,6 +2333,7 @@
 85.117.82.141 xmlrpc;
 85.140.163.95 xmlrpc;
 85.140.22.162 xmlrpc;
+85.140.4.175 xmlrpc;
 85.143.173.5 xmlrpc;
 85.174.197.235 xmlrpc;
 85.174.204.118 xmlrpc;
