--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -817,6 +817,7 @@
 178.57.235.131 xmlrpc;
 178.64.165.180 xmlrpc;
 178.65.112.176 xmlrpc;
+178.65.188.160 xmlrpc;
 178.66.28.65 xmlrpc;
 178.67.15.234 xmlrpc;
 178.67.192.244 xmlrpc;
