Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2387,6 +2387,7 @@
 87.250.224.4 xmlrpc;
 87.250.224.5 xmlrpc;
 87.250.224.7 xmlrpc;
+87.250.224.79 xmlrpc;
 87.250.224.8 xmlrpc;
 87.250.224.9 xmlrpc;
 87.255.10.63 xmlrpc;
