Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2055,6 +2055,7 @@
 5.23.50.26 xmlrpc;
 5.23.51.195 xmlrpc;
 5.23.51.23 xmlrpc;
+5.23.51.25 xmlrpc;
 5.252.29.87 xmlrpc;
 5.252.30.31 xmlrpc;
 5.252.31.123 xmlrpc;
@@ -2601,6 +2602,7 @@
 94.19.187.175 xmlrpc;
 94.198.4.44 xmlrpc;
 94.228.198.147 xmlrpc;
+94.232.95.86 xmlrpc;
 94.233.240.237 xmlrpc;
 94.233.248.229 xmlrpc;
 94.233.249.141 xmlrpc;
