--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -307,6 +307,7 @@
 123.13.56.176 xmlrpc;
 123.13.56.192 xmlrpc;
 123.13.56.213 xmlrpc;
+123.13.56.37 xmlrpc;
 123.13.57.12 xmlrpc;
 123.13.57.162 xmlrpc;
 123.13.57.170 xmlrpc;
@@ -2382,6 +2383,7 @@
 87.250.224.7 xmlrpc;
 87.250.224.79 xmlrpc;
 87.250.224.8 xmlrpc;
+87.250.224.81 xmlrpc;
 87.250.224.9 xmlrpc;
 87.255.10.63 xmlrpc;
 87.255.16.162 xmlrpc;
