--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2691,6 +2691,7 @@
 95.24.111.151 xmlrpc;
 95.24.116.194 xmlrpc;
 95.24.119.216 xmlrpc;
+95.24.124.112 xmlrpc;
 95.24.124.237 xmlrpc;
 95.24.148.241 xmlrpc;
 95.24.150.103 xmlrpc;
