Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1389,6 +1389,7 @@
 212.3.130.46 xmlrpc;
 212.3.130.78 xmlrpc;
 212.3.142.141 xmlrpc;
+212.3.142.247 xmlrpc;
 212.32.208.216 xmlrpc;
 212.32.208.218 xmlrpc;
 212.34.120.88 xmlrpc;
