Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2311,6 +2311,7 @@
 83.146.70.58 xmlrpc;
 83.219.130.36 xmlrpc;
 83.222.19.78 xmlrpc;
+83.234.150.25 xmlrpc;
 83.234.150.27 xmlrpc;
 83.234.150.32 xmlrpc;
 83.234.150.33 xmlrpc;
