--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -581,6 +581,7 @@
 154.26.134.183 xmlrpc;
 154.92.15.129 xmlrpc;
 156.146.56.119 xmlrpc;
+156.146.56.138 xmlrpc;
 156.227.14.155 xmlrpc;
 156.227.14.165 xmlrpc;
 156.227.14.203 xmlrpc;
@@ -716,6 +717,7 @@
 176.74.202.15 xmlrpc;
 176.77.108.83 xmlrpc;
 176.96.255.239 xmlrpc;
+176.97.175.169 xmlrpc;
 176.98.158.235 xmlrpc;
 176.99.203.178 xmlrpc;
 176.99.235.7 xmlrpc;
