Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -694,6 +694,7 @@
 176.212.216.154 xmlrpc;
 176.212.68.196 xmlrpc;
 176.212.68.208 xmlrpc;
+176.212.68.254 xmlrpc;
 176.212.72.61 xmlrpc;
 176.215.187.55 xmlrpc;
 176.215.188.80 xmlrpc;
@@ -1067,6 +1068,7 @@
 185.95.106.204 xmlrpc;
 185.99.6.45 xmlrpc;
 185.99.7.46 xmlrpc;
+185.99.7.61 xmlrpc;
 185.99.7.68 xmlrpc;
 188.0.169.118 xmlrpc;
 188.0.169.252 xmlrpc;
