Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1556,6 +1556,7 @@
 2a03:6f00:5:1::34c9 xmlrpc;
 2a03:6f00:6:1::3 xmlrpc;
 2a03:6f00:6:1::517:3284 xmlrpc;
+2a03:6f00:6:1::517:3319 xmlrpc;
 2a03:6f00:6:1::b972:f56d xmlrpc;
 2a03:6f00:6:1::b972:f7e8 xmlrpc;
 2a03:6f00:6:1::bce1:17aa xmlrpc;
@@ -2058,7 +2059,6 @@
 5.228.4.204 xmlrpc;
 5.228.80.166 xmlrpc;
 5.228.80.175 xmlrpc;
-5.228.82.199 xmlrpc;
 5.228.82.40 xmlrpc;
 5.228.82.95 xmlrpc;
 5.228.83.154 xmlrpc;
