--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -726,6 +726,7 @@
 176.99.235.7 xmlrpc;
 176.99.86.125 xmlrpc;
 176.99.9.19 xmlrpc;
+178.128.103.253 xmlrpc;
 178.128.127.179 xmlrpc;
 178.128.31.8 xmlrpc;
 178.128.55.64 xmlrpc;
