--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -301,6 +301,7 @@
 123.13.56.176 xmlrpc;
 123.13.56.192 xmlrpc;
 123.13.56.213 xmlrpc;
+123.13.56.221 xmlrpc;
 123.13.56.37 xmlrpc;
 123.13.57.12 xmlrpc;
 123.13.57.162 xmlrpc;
@@ -330,6 +331,7 @@
 123.13.61.156 xmlrpc;
 123.13.61.231 xmlrpc;
 123.13.61.233 xmlrpc;
+123.13.61.5 xmlrpc;
 123.13.61.66 xmlrpc;
 123.13.62.160 xmlrpc;
 123.13.62.230 xmlrpc;
