--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -333,6 +333,7 @@
 123.13.61.233 xmlrpc;
 123.13.61.5 xmlrpc;
 123.13.61.66 xmlrpc;
+123.13.62.122 xmlrpc;
 123.13.62.160 xmlrpc;
 123.13.62.230 xmlrpc;
 123.13.62.39 xmlrpc;
@@ -2228,6 +2229,7 @@
 8.219.54.193 xmlrpc;
 80.234.66.125 xmlrpc;
 80.234.72.129 xmlrpc;
+80.234.78.10 xmlrpc;
 80.234.78.97 xmlrpc;
 80.234.78.99 xmlrpc;
 80.237.123.18 xmlrpc;
