--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -317,6 +317,7 @@
 123.13.58.236 xmlrpc;
 123.13.58.45 xmlrpc;
 123.13.58.50 xmlrpc;
+123.13.58.79 xmlrpc;
 123.13.59.127 xmlrpc;
 123.13.59.172 xmlrpc;
 123.13.59.21 xmlrpc;
@@ -2707,6 +2708,7 @@
 95.25.87.148 xmlrpc;
 95.26.130.166 xmlrpc;
 95.26.130.200 xmlrpc;
+95.26.131.87 xmlrpc;
 95.26.133.18 xmlrpc;
 95.26.168.27 xmlrpc;
 95.26.208.29 xmlrpc;
