--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -327,6 +327,7 @@
 123.13.59.96 xmlrpc;
 123.13.60.140 xmlrpc;
 123.13.60.173 xmlrpc;
+123.13.60.207 xmlrpc;
 123.13.60.63 xmlrpc;
 123.13.60.86 xmlrpc;
 123.13.60.95 xmlrpc;
