--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -331,6 +331,7 @@
 123.13.60.86 xmlrpc;
 123.13.60.95 xmlrpc;
 123.13.61.156 xmlrpc;
+123.13.61.180 xmlrpc;
 123.13.61.231 xmlrpc;
 123.13.61.233 xmlrpc;
 123.13.61.5 xmlrpc;
