Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -328,6 +328,7 @@
 123.13.60.173 xmlrpc;
 123.13.60.207 xmlrpc;
 123.13.60.63 xmlrpc;
+123.13.60.69 xmlrpc;
 123.13.60.86 xmlrpc;
 123.13.60.95 xmlrpc;
 123.13.61.156 xmlrpc;
