--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -721,6 +721,7 @@
 176.59.166.90 xmlrpc;
 176.59.4.173 xmlrpc;
 176.59.47.31 xmlrpc;
+176.59.50.79 xmlrpc;
 176.59.56.34 xmlrpc;
 176.77.108.83 xmlrpc;
 176.96.255.239 xmlrpc;
@@ -2738,6 +2739,7 @@
 95.73.171.35 xmlrpc;
 95.73.175.18 xmlrpc;
 95.73.219.246 xmlrpc;
+95.73.52.155 xmlrpc;
 95.73.86.247 xmlrpc;
 95.78.209.180 xmlrpc;
 95.79.83.142 xmlrpc;
