--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -261,6 +261,7 @@
 119.91.199.228 xmlrpc;
 119.91.220.220 xmlrpc;
 119.91.252.123 xmlrpc;
+120.11.92.48 xmlrpc;
 120.234.203.171 xmlrpc;
 120.24.108.217 xmlrpc;
 120.24.109.199 xmlrpc;
