--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -954,6 +954,7 @@
 185.15.38.109 xmlrpc;
 185.15.38.126 xmlrpc;
 185.15.38.132 xmlrpc;
+185.15.38.18 xmlrpc;
 185.15.38.19 xmlrpc;
 185.15.38.31 xmlrpc;
 185.15.38.34 xmlrpc;
