Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2693,6 +2693,7 @@
 95.24.45.50 xmlrpc;
 95.24.46.89 xmlrpc;
 95.24.57.95 xmlrpc;
+95.24.6.107 xmlrpc;
 95.24.6.7 xmlrpc;
 95.24.64.180 xmlrpc;
 95.24.70.57 xmlrpc;
