--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -309,6 +309,7 @@
 123.13.57.174 xmlrpc;
 123.13.57.197 xmlrpc;
 123.13.57.21 xmlrpc;
+123.13.57.60 xmlrpc;
 123.13.57.61 xmlrpc;
 123.13.58.11 xmlrpc;
 123.13.58.178 xmlrpc;
