Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -333,6 +333,7 @@
 123.13.60.69 xmlrpc;
 123.13.60.86 xmlrpc;
 123.13.60.95 xmlrpc;
+123.13.61.152 xmlrpc;
 123.13.61.156 xmlrpc;
 123.13.61.180 xmlrpc;
 123.13.61.231 xmlrpc;
@@ -2243,6 +2244,7 @@
 80.234.78.10 xmlrpc;
 80.234.78.97 xmlrpc;
 80.234.78.99 xmlrpc;
+80.234.96.31 xmlrpc;
 80.237.123.18 xmlrpc;
 80.242.99.117 xmlrpc;
 80.244.42.61 xmlrpc;
