Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2468,6 +2468,7 @@
 91.211.93.86 xmlrpc;
 91.214.141.33 xmlrpc;
 91.214.142.67 xmlrpc;
+91.214.82.47 xmlrpc;
 91.214.82.59 xmlrpc;
 91.215.202.18 xmlrpc;
 91.215.202.26 xmlrpc;
@@ -2594,6 +2595,7 @@
 94.140.246.3 xmlrpc;
 94.140.246.37 xmlrpc;
 94.141.125.234 xmlrpc;
+94.142.11.29 xmlrpc;
 94.142.248.83 xmlrpc;
 94.143.40.220 xmlrpc;
 94.158.190.37 xmlrpc;
