--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2403,6 +2403,7 @@
 89.188.179.122 xmlrpc;
 89.208.153.55 xmlrpc;
 89.222.217.56 xmlrpc;
+89.23.104.170 xmlrpc;
 89.23.151.203 xmlrpc;
 89.23.151.27 xmlrpc;
 89.23.193.102 xmlrpc;
