--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -316,6 +316,7 @@
 123.13.58.236 xmlrpc;
 123.13.58.45 xmlrpc;
 123.13.58.50 xmlrpc;
+123.13.58.74 xmlrpc;
 123.13.58.79 xmlrpc;
 123.13.59.127 xmlrpc;
 123.13.59.172 xmlrpc;
@@ -2424,6 +2425,7 @@
 91.107.117.48 xmlrpc;
 91.108.29.35 xmlrpc;
 91.109.225.52 xmlrpc;
+91.109.225.57 xmlrpc;
 91.122.85.131 xmlrpc;
 91.123.31.86 xmlrpc;
 91.184.253.252 xmlrpc;
