--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -57,6 +57,7 @@
 103.89.137.56 xmlrpc;
 103.96.129.12 xmlrpc;
 104.248.153.75 xmlrpc;
+104.28.156.218 xmlrpc;
 104.28.156.224 xmlrpc;
 104.28.157.195 xmlrpc;
 104.28.157.196 xmlrpc;
