--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1806,6 +1806,7 @@
 45.87.253.30 xmlrpc;
 45.88.149.239 xmlrpc;
 45.89.100.115 xmlrpc;
+45.94.119.156 xmlrpc;
 45.94.119.197 xmlrpc;
 45.95.67.177 xmlrpc;
 46.0.137.179 xmlrpc;
