Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2562,6 +2562,7 @@
 94.140.233.151 xmlrpc;
 94.140.233.208 xmlrpc;
 94.140.246.3 xmlrpc;
+94.140.246.31 xmlrpc;
 94.140.246.37 xmlrpc;
 94.141.125.234 xmlrpc;
 94.142.11.29 xmlrpc;
