--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1452,6 +1452,7 @@
 213.232.235.83 xmlrpc;
 213.24.125.82 xmlrpc;
 213.24.127.137 xmlrpc;
+213.24.133.145 xmlrpc;
 213.24.133.198 xmlrpc;
 213.24.133.245 xmlrpc;
 213.24.134.51 xmlrpc;
