--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -965,6 +965,7 @@
 185.15.38.34 xmlrpc;
 185.15.38.48 xmlrpc;
 185.15.38.67 xmlrpc;
+185.15.38.83 xmlrpc;
 185.15.38.98 xmlrpc;
 185.152.95.108 xmlrpc;
 185.16.106.75 xmlrpc;
@@ -2589,6 +2590,7 @@
 94.243.213.17 xmlrpc;
 94.243.231.87 xmlrpc;
 94.25.172.38 xmlrpc;
+94.25.173.250 xmlrpc;
 94.25.189.239 xmlrpc;
 94.250.249.80 xmlrpc;
 94.250.251.175 xmlrpc;
