Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2500,6 +2500,7 @@
 92.223.86.15 xmlrpc;
 92.223.86.9 xmlrpc;
 92.240.221.127 xmlrpc;
+92.241.246.150 xmlrpc;
 92.245.34.207 xmlrpc;
 92.246.154.252 xmlrpc;
 92.248.137.83 xmlrpc;
