--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1254,6 +1254,7 @@
 194.15.118.168 xmlrpc;
 194.190.1.194 xmlrpc;
 194.195.90.110 xmlrpc;
+194.226.32.202 xmlrpc;
 194.233.64.69 xmlrpc;
 194.233.66.60 xmlrpc;
 194.32.229.140 xmlrpc;
