Push from Scanner

--- a/nginx-config-files/git.conf
+++ b/nginx-config-files/git.conf
@@ -733,6 +733,7 @@
 2a0e:1bc0:193:109c::1 git;
 2a0e:1bc1:129:10cf::1 git;
 2a0e:1bc1:129:10e6::1 git;
+3.110.156.69 git;
 3.110.68.163 git;
 3.124.123.190 git;
 3.126.118.145 git;
