Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2587,6 +2587,7 @@
 94.142.11.29 xmlrpc;
 94.142.248.83 xmlrpc;
 94.143.40.220 xmlrpc;
+94.143.40.246 xmlrpc;
 94.158.190.37 xmlrpc;
 94.158.190.83 xmlrpc;
 94.180.37.250 xmlrpc;
