Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -817,6 +817,7 @@
 178.34.162.148 xmlrpc;
 178.34.163.120 xmlrpc;
 178.45.125.50 xmlrpc;
+178.45.142.69 xmlrpc;
 178.45.171.89 xmlrpc;
 178.45.172.13 xmlrpc;
 178.46.107.97 xmlrpc;
@@ -2182,6 +2183,7 @@
 77.43.190.59 xmlrpc;
 77.43.246.75 xmlrpc;
 77.50.102.168 xmlrpc;
+77.51.144.158 xmlrpc;
 77.51.149.89 xmlrpc;
 77.75.8.55 xmlrpc;
 78.132.156.23 xmlrpc;
@@ -2674,6 +2676,7 @@
 95.182.126.116 xmlrpc;
 95.182.91.5 xmlrpc;
 95.183.76.77 xmlrpc;
+95.188.160.106 xmlrpc;
 95.188.189.188 xmlrpc;
 95.189.74.219 xmlrpc;
 95.189.75.170 xmlrpc;
