Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2665,6 +2665,7 @@
 95.161.140.4 xmlrpc;
 95.161.142.40 xmlrpc;
 95.161.220.114 xmlrpc;
+95.174.115.204 xmlrpc;
 95.179.121.215 xmlrpc;
 95.179.124.242 xmlrpc;
 95.179.125.212 xmlrpc;
