Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2566,6 +2566,7 @@
 93.123.253.214 xmlrpc;
 93.124.114.229 xmlrpc;
 93.124.96.204 xmlrpc;
+93.157.19.106 xmlrpc;
 93.157.23.65 xmlrpc;
 93.157.255.5 xmlrpc;
 93.158.248.9 xmlrpc;
