--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -520,6 +520,7 @@
 146.158.124.61 xmlrpc;
 146.158.125.107 xmlrpc;
 146.185.200.217 xmlrpc;
+146.19.59.135 xmlrpc;
 146.19.59.41 xmlrpc;
 146.19.78.12 xmlrpc;
 146.190.103.193 xmlrpc;
