--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1434,6 +1434,7 @@
 212.7.240.145 xmlrpc;
 212.7.251.250 xmlrpc;
 212.94.17.142 xmlrpc;
+212.94.23.12 xmlrpc;
 213.108.2.19 xmlrpc;
 213.149.6.113 xmlrpc;
 213.171.9.212 xmlrpc;
@@ -2674,6 +2675,7 @@
 95.108.213.92 xmlrpc;
 95.108.213.98 xmlrpc;
 95.110.74.58 xmlrpc;
+95.152.63.82 xmlrpc;
 95.156.124.98 xmlrpc;
 95.159.176.69 xmlrpc;
 95.161.140.4 xmlrpc;
