--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2232,6 +2232,7 @@
 79.165.73.73 xmlrpc;
 79.173.65.10 xmlrpc;
 79.173.69.143 xmlrpc;
+79.173.88.44 xmlrpc;
 79.174.33.157 xmlrpc;
 79.174.33.250 xmlrpc;
 8.130.132.51 xmlrpc;
