Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -828,6 +828,7 @@
 178.46.110.79 xmlrpc;
 178.46.121.212 xmlrpc;
 178.46.206.126 xmlrpc;
+178.47.124.106 xmlrpc;
 178.49.195.145 xmlrpc;
 178.57.116.166 xmlrpc;
 178.57.235.131 xmlrpc;
