--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -986,6 +986,7 @@
 185.16.138.156 xmlrpc;
 185.16.138.85 xmlrpc;
 185.162.33.48 xmlrpc;
+185.165.160.170 xmlrpc;
 185.165.163.127 xmlrpc;
 185.165.163.32 xmlrpc;
 185.165.163.57 xmlrpc;
@@ -1856,6 +1857,7 @@
 46.148.132.183 xmlrpc;
 46.148.141.160 xmlrpc;
 46.148.141.31 xmlrpc;
+46.151.106.218 xmlrpc;
 46.151.106.59 xmlrpc;
 46.151.107.166 xmlrpc;
 46.158.64.10 xmlrpc;
