Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1195,6 +1195,7 @@
 188.65.18.151 xmlrpc;
 188.65.18.176 xmlrpc;
 188.65.18.213 xmlrpc;
+188.65.18.24 xmlrpc;
 188.65.18.86 xmlrpc;
 188.68.168.129 xmlrpc;
 188.68.194.27 xmlrpc;
@@ -2333,6 +2334,7 @@
 83.222.19.78 xmlrpc;
 83.234.150.25 xmlrpc;
 83.234.150.27 xmlrpc;
+83.234.150.31 xmlrpc;
 83.234.150.32 xmlrpc;
 83.234.43.24 xmlrpc;
 83.239.241.87 xmlrpc;
@@ -2512,6 +2514,7 @@
 91.226.165.101 xmlrpc;
 91.226.165.131 xmlrpc;
 91.226.165.206 xmlrpc;
+91.226.166.24 xmlrpc;
 91.226.167.133 xmlrpc;
 91.227.46.94 xmlrpc;
 91.228.98.75 xmlrpc;
@@ -2728,6 +2731,7 @@
 95.24.20.223 xmlrpc;
 95.24.221.75 xmlrpc;
 95.24.233.133 xmlrpc;
+95.24.239.139 xmlrpc;
 95.24.3.105 xmlrpc;
 95.24.38.108 xmlrpc;
 95.24.45.50 xmlrpc;
