--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2582,6 +2582,7 @@
 92.53.96.223 xmlrpc;
 92.53.97.221 xmlrpc;
 92.53.99.196 xmlrpc;
+92.62.56.200 xmlrpc;
 92.62.57.108 xmlrpc;
 92.62.57.200 xmlrpc;
 92.62.57.255 xmlrpc;
