Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -765,6 +765,7 @@
 178.155.5.164 xmlrpc;
 178.155.5.26 xmlrpc;
 178.159.41.222 xmlrpc;
+178.162.18.29 xmlrpc;
 178.162.61.139 xmlrpc;
 178.163.84.174 xmlrpc;
 178.167.86.227 xmlrpc;
@@ -2687,6 +2688,7 @@
 95.108.213.221 xmlrpc;
 95.108.213.233 xmlrpc;
 95.108.213.238 xmlrpc;
+95.108.213.239 xmlrpc;
 95.108.213.247 xmlrpc;
 95.108.213.86 xmlrpc;
 95.108.213.92 xmlrpc;
