--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -348,6 +348,7 @@
 123.13.62.17 xmlrpc;
 123.13.62.230 xmlrpc;
 123.13.62.235 xmlrpc;
+123.13.62.29 xmlrpc;
 123.13.62.39 xmlrpc;
 123.13.63.142 xmlrpc;
 123.13.63.150 xmlrpc;
@@ -1861,6 +1862,7 @@
 46.151.106.218 xmlrpc;
 46.151.106.59 xmlrpc;
 46.151.107.166 xmlrpc;
+46.158.118.57 xmlrpc;
 46.158.64.10 xmlrpc;
 46.160.224.100 xmlrpc;
 46.160.235.156 xmlrpc;
@@ -2280,6 +2282,7 @@
 80.244.45.151 xmlrpc;
 80.246.81.133 xmlrpc;
 80.246.94.129 xmlrpc;
+80.246.94.222 xmlrpc;
 80.251.227.61 xmlrpc;
 80.251.230.94 xmlrpc;
 80.251.232.16 xmlrpc;
@@ -2358,6 +2361,7 @@
 85.140.163.95 xmlrpc;
 85.140.4.175 xmlrpc;
 85.143.173.5 xmlrpc;
+85.174.200.158 xmlrpc;
 85.174.200.170 xmlrpc;
 85.174.204.118 xmlrpc;
 85.174.205.140 xmlrpc;
