Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1807,6 +1807,7 @@
 45.134.182.150 xmlrpc;
 45.136.246.124 xmlrpc;
 45.137.112.205 xmlrpc;
+45.140.52.89 xmlrpc;
 45.143.236.252 xmlrpc;
 45.147.192.184 xmlrpc;
 45.15.112.144 xmlrpc;
@@ -2269,6 +2270,7 @@
 8.218.88.143 xmlrpc;
 8.218.96.89 xmlrpc;
 8.219.54.193 xmlrpc;
+80.234.28.249 xmlrpc;
 80.234.66.125 xmlrpc;
 80.234.72.129 xmlrpc;
 80.234.78.10 xmlrpc;
