Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1234,6 +1234,7 @@
 193.168.179.50 xmlrpc;
 193.168.3.20 xmlrpc;
 193.169.25.165 xmlrpc;
+193.169.25.167 xmlrpc;
 193.176.83.85 xmlrpc;
 193.194.98.211 xmlrpc;
 193.200.12.208 xmlrpc;
