--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1108,6 +1108,7 @@
 188.0.169.73 xmlrpc;
 188.0.175.16 xmlrpc;
 188.0.175.17 xmlrpc;
+188.0.175.89 xmlrpc;
 188.0.189.151 xmlrpc;
 188.0.189.215 xmlrpc;
 188.113.166.115 xmlrpc;
@@ -2625,6 +2626,7 @@
 94.103.231.191 xmlrpc;
 94.103.231.250 xmlrpc;
 94.125.242.249 xmlrpc;
+94.140.148.35 xmlrpc;
 94.140.152.206 xmlrpc;
 94.140.233.151 xmlrpc;
 94.140.233.208 xmlrpc;
