Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1665,6 +1665,7 @@
 37.1.12.35 xmlrpc;
 37.113.123.202 xmlrpc;
 37.113.237.15 xmlrpc;
+37.114.28.45 xmlrpc;
 37.139.53.17 xmlrpc;
 37.139.53.191 xmlrpc;
 37.139.53.25 xmlrpc;
