--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1133,6 +1133,7 @@
 188.143.218.112 xmlrpc;
 188.16.109.253 xmlrpc;
 188.162.250.60 xmlrpc;
+188.162.49.92 xmlrpc;
 188.166.187.53 xmlrpc;
 188.166.231.114 xmlrpc;
 188.166.237.236 xmlrpc;
@@ -2598,6 +2599,7 @@
 92.53.97.221 xmlrpc;
 92.53.99.196 xmlrpc;
 92.62.56.200 xmlrpc;
+92.62.56.233 xmlrpc;
 92.62.57.108 xmlrpc;
 92.62.57.200 xmlrpc;
 92.62.57.255 xmlrpc;
@@ -2784,6 +2786,7 @@
 95.27.147.73 xmlrpc;
 95.29.195.237 xmlrpc;
 95.32.12.207 xmlrpc;
+95.32.131.193 xmlrpc;
 95.32.133.18 xmlrpc;
 95.32.219.183 xmlrpc;
 95.37.102.48 xmlrpc;
