--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1555,7 +1555,6 @@
 2400:8901::f03c:93ff:fe4b:c5dd xmlrpc;
 2400:8901::f03c:93ff:feab:1f25 xmlrpc;
 2401:c080:1400:51a8:5400:4ff:fe21:e407 xmlrpc;
-2401:c080:1400:5a24:5400:4ff:fe20:9ad3 xmlrpc;
 2402:1f00:8000:207:: xmlrpc;
 2402:1f00:8000:800::3c19 xmlrpc;
 2402:1f00:8001:1203:: xmlrpc;
@@ -1907,6 +1906,7 @@
 46.252.127.167 xmlrpc;
 46.29.208.18 xmlrpc;
 46.31.24.80 xmlrpc;
+46.31.25.98 xmlrpc;
 46.31.27.4 xmlrpc;
 46.31.28.55 xmlrpc;
 46.32.87.161 xmlrpc;
