--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2210,6 +2210,7 @@
 77.37.161.73 xmlrpc;
 77.37.232.193 xmlrpc;
 77.40.2.201 xmlrpc;
+77.40.3.126 xmlrpc;
 77.43.190.59 xmlrpc;
 77.43.246.75 xmlrpc;
 77.50.102.168 xmlrpc;
