--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -517,6 +517,7 @@
 146.158.112.218 xmlrpc;
 146.158.119.90 xmlrpc;
 146.158.122.4 xmlrpc;
+146.158.124.20 xmlrpc;
 146.158.124.29 xmlrpc;
 146.158.124.30 xmlrpc;
 146.158.124.52 xmlrpc;
@@ -974,6 +975,7 @@
 185.141.237.109 xmlrpc;
 185.141.76.204 xmlrpc;
 185.145.125.161 xmlrpc;
+185.146.212.104 xmlrpc;
 185.15.38.109 xmlrpc;
 185.15.38.132 xmlrpc;
 185.15.38.18 xmlrpc;
@@ -2450,6 +2452,7 @@
 88.80.60.29 xmlrpc;
 89.106.173.182 xmlrpc;
 89.109.231.175 xmlrpc;
+89.109.44.156 xmlrpc;
 89.109.44.193 xmlrpc;
 89.109.45.99 xmlrpc;
 89.109.47.143 xmlrpc;
