--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -991,6 +991,7 @@
 185.16.138.138 xmlrpc;
 185.16.138.156 xmlrpc;
 185.16.138.85 xmlrpc;
+185.16.139.167 xmlrpc;
 185.162.33.48 xmlrpc;
 185.165.160.170 xmlrpc;
 185.165.163.127 xmlrpc;
@@ -2781,6 +2782,7 @@
 95.25.198.3 xmlrpc;
 95.25.215.2 xmlrpc;
 95.25.23.3 xmlrpc;
+95.25.241.71 xmlrpc;
 95.25.245.217 xmlrpc;
 95.25.248.33 xmlrpc;
 95.25.250.61 xmlrpc;
